Revision history for DBIx-Perlish

0.33  Wed Dec 12 11:43:20 2007
       Fix a bug in special import syntax implementation.
       Add special import syntax tests.

0.32  Tue Nov  6 10:07:13 2007
       Fix incorrect regex handling with sqlite driver.

0.31  Wed Oct 17 13:14:54 2007
       Add new import syntax to ease working with
       multiple DB handles at the same time, and
       document various ways to use multiple database
       handles with Perlish.
       Add support for sort as an alternative to
       order_by: label syntax.

0.30  Tue Oct 16 14:31:59 2007
       When run under Devel::Cover, do some cheating,
       so that query subs that are parsed appear to
       be "covered" (statements & subs).
       Add tests to provide better test coverage.
       Implement explicit logical AND.
       Fix logical OR precedence problems in generated SQL.
       Allow returns to be evaluated conditionally
       (so that a single query sub can return different
       things, depending on the outside information).
       Please CPAN::Reporter.

0.29  Tue Oct  9 15:16:48 2007
       Allow aliased constants in return statements.

0.28  Mon Oct  1 09:32:55 2007
       Add support for inline views.

0.27  Wed Jul 11 16:53:40 2007
       Fix a tricky bug with outer lexical variables used inside a union
       and friends.
       Do not require semicolons between chained union-like constructs.

0.26  Fri Jun 22 15:25:10 2007
       Specialcase selects from DUAL in Oracle.

0.25  Thu May 10 12:48:40 2007
       Bugfix for inherited db handles.

0.24  Thu May  3 09:30:20 2007
       Understand ++,+= etc in updates.
       Various documentation fixes.
       Add support $m = {%h} syntax for bulk updates.

0.23  Mon Mar 26 23:44:14 2007
       Support inherited database handles.
       Add special handling for package global $dbh.

0.22  Tue Mar 20 12:10:33 2007
       Understand multi-level hash dereferencing.
       Make empty updates not valid.
